Intial commit with HTML structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+    <head>
+        <title>Front end developer </title>
+    </head>
 <body>
     <h1>Front END</h1>
     <h2>Vanisha</h2>
-    <p> </p>
+    <p>this is a very good day and environment was nice and beautiful and amazing  </p>
 </body>
 </html>
